# IOS-MCN-Scheduler

./: build_ran
.github/workflows/: auto-add-submodules.yaml  build.yml  test_cases.yml
backup-2026-07/: .gitignore  README.md  launch_ues.sh
backup-2026-07/conf/: gnb-cucp.sa.f1-e1.iisc.conf.bak  gnb-cuup.sa.f1-e1.iisc.conf.bak  gnb-du.sa.band78.106PRB.1x1-f1-e1-usrpb210.conf  gnb-du.sa.band78.106PRB.1x1-f1-e1-usrpx310.conf  gnb-du.sa.band78.106PRB.rfsim.conf  gnb-du.sa.band78.106PRB.rfsim.conf.bak  (+3 more)
backup-2026-07/openairinterface5g/radio/fhi_72_bronze/: CMakeLists.txt  CMakeLists.txt-orig  oaioran.c  oran_isolate.c
conf/: gnb-cucp.sa.f1-e1.iisc.conf  gnb-cuup.sa.f1-e1.iisc.conf  gnb-du.sa.band1.52prb.usrpb210.conf  gnb-du.sa.band78.106PRB.1x1-f1-e1-usrpb210.conf.bak  gnb-du.sa.band78.106PRB.2x2-f1-e1-usrpx310.conf  gnb-du.sa.band78.273PRB.1x1-f1-e1-lekha-mplane.iisc.conf  gnb-du.sa.band78.273PRB.1x1-f1-e1-lekha.iisc.conf  gnb-du.sa.band78.273PRB.1x1-f1-e1-vvdn_gen1.iisc.conf  gnb-du.sa.band78.273PRB.1x1-f1-e1-vvdn_gen3-mplane.iisc.conf  gnb-du.sa.band78.273PRB.1x1-f1-e1-vvdn_gen3.iisc.conf  gnb-du.sa.band78.273PRB.2x2-f1-e1-vvdn_gen1.iisc.conf  gnb-du.sa.band78.273PRB.2x2-f1-e1-vvdn_gen3-mplane.iisc.conf  ue.sa.conf  ue2.sa.conf  ue3.sa.conf  ue4.sa.conf  ue5.sa.conf
doc/: ORAN_FHI7.2_Tutorial.md  RUNUEMODEM.md  Troubleshooting.md  developers-guide.md
log/: xran_install_log.txt
o1-adapter/: Makefile  README.md
openairinterface5g/: CMakeLists.txt
scripts/: .env  README.md  build_helper  build_o1_adapter.sh  netconf_dep_install.sh  setup_dhcp_server.sh  setup_linuxptp.sh  vf_setup_du.sh
(+4971 files in other folders)
